Using locally rendered API docs
